REGRESSION: WebGL shader linking error with Metal backend when mixing scalar with vector https://bugs.webkit.org/show_bug.cgi?id=283576 rdar://140546518

Reviewed by Kimmo Kinnunen.

Update the arithmetic helpers that handle UB to support operations between scalars and vectors.

* Source/ThirdParty/ANGLE/src/compiler/translator/Types.h:
(sh::TType::isSignedInt const):
(sh::TType::isSignedIntegerValue const): Deleted.
* Source/ThirdParty/ANGLE/src/compiler/translator/msl/EmitMetal.cpp:
(GetOperatorString):
(GenMetalTraverser::visitBinary):
* Source/ThirdParty/ANGLE/src/compiler/translator/msl/ProgramPrelude.cpp:
(PROGRAM_PRELUDE_DECLARE):
* Source/ThirdParty/ANGLE/src/tests/gl_tests/GLSLTest.cpp:

Canonical link: https://commits.webkit.org/287588@main